<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Total de quilometros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="km_por_litro">KM por Litro</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="valor_total">R$ 0</string>
    <string name="gasto_total">Seu gasto total será de:</string>
</resources>
